deploy/applications/ingestion/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion
  namespace: postgres
  labels:
    app.kubernetes.io/name: ingestion
    app.kubernetes.io/part-of: iris
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ingestion
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingestion
        app.kubernetes.io/part-of: iris
    spec:
      containers:
        - name: ingestion
          image: ghcr.io/zero-technolgies/iris-ingestion:b363547
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
