deploy/applications/ingestion/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestion
  namespace: postgres
  labels:
    app.kubernetes.io/name: ingestion
    app.kubernetes.io/part-of: iris
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ingestion
  ports:
    - name: http
      port: 8080
      targetPort: http
