deploy/applications/ingestion/manifests/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingestion-healthz
  namespace: postgres
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ingestion.iris.calebache.com`) && Path(`/healthz`)
      kind: Rule
      services:
        - name: ingestion
          port: 8080
  tls:
    secretName: ingestion-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingestion-healthz-http-redirect
  namespace: postgres
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ingestion.iris.calebache.com`) && Path(`/healthz`)
      kind: Rule
      middlewares:
        - name: ingestion-redirect-https
      services:
        - name: ingestion
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ingestion-redirect-https
  namespace: postgres
spec:
  redirectScheme:
    scheme: https
    permanent: true
